Mais um commit pra nada

--- a/src/components/estaticos/navbar/Navbar.css
+++ b/src/components/estaticos/navbar/Navbar.css
@@ -4,7 +4,7 @@
 }
 .tituloNavbar{
     margin-right: 10px!important;
-    color: rgb(255, 0, 132)!important;
+    color: #e7cd44!important;
     font-weight: bold!important;
     padding: 5px;
 
