--- a/src/components/categorias/cadastroCategoria/CadastroCategoria.css
+++ b/src/components/categorias/cadastroCategoria/CadastroCategoria.css
@@ -1,17 +1,62 @@
-.flexContainer1{
-    display: flex!important;
-    height: 700px!important;
-    width: center!important;
-    justify-content: center!important;
-    align-items: center!important;
+.card{
+    background: linear-gradient(36deg,  #ffffff 1%, #671a62 78%)!important;
 }
 
-.formContainer{
-    background-color: #7801af!Important;
-    color: rgb(136, 0, 125)!Important;
-    width: center!Important;
-    height: center!Important;
-   
+.form{
+    width: 270px;
+}
+
+.form-input{
+    width: 100%;
+}
+
+.MuiFormLabel-root{
+    color: #FFFFFF;
+}
+
+.background{
+    background: linear-gradient(127deg,  #671a62 18%, #00008b 90%)!important;
+
+    width: 100vw;
+    min-height: calc(100vh - 1px); 
+}
+
+.botao{
+    font-size:14px!important;
+    font-family:Arial!important;
+    width:121px;
+    height:42px;
+    color:#671a62!important;
+    border-color:#e7cd44;
+    font-weight:bold!important;
+    border-top-left-radius:19px!important;
+    border-top-right-radius:19px!important;
+    border-bottom-left-radius:19px!important;
+    border-bottom-right-radius:19px!important;
+    box-shadow: -1px 12px 16px -7px #e7cd44;
+    text-shadow: -1px -1px 20px #e7cd44;
+    background:linear-gradient(#e7cd44, #cfb94d);
+  }
+  
+  .botao:hover {
+    background: linear-gradient(#ecd669, #c9ba6d);
+  }
+
+  .title{
+    color:#e7cd44!important;
+    font-weight:bold!important;
+  }
 
 
+.input{
+
+margin:  auto;
+padding: 1px!important;
+border: none;
+margin-bottom: 10px;
+border-top-left-radius:19px!important;
+border-top-right-radius:19px!important;
+border-bottom-left-radius:19px!important;
+border-bottom-right-radius:19px!important;
+    
 }
