--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,13 @@
   font-family: 'Roboto', sans-serif;
 }
 
+.background{
+  background: linear-gradient(127deg,  #671a62 18%, #9960b6 90%)!important;
+
+  width: 100vw;
+  min-height: calc(100vh - 1px); 
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
