--- a/src/components/carousel/CarouselComponent.css
+++ b/src/components/carousel/CarouselComponent.css
@@ -1,5 +1,6 @@
 img {
-    width: 1246px;
-    height: 500px;
+    width: 1000vh;
+    height: 75vh;
     object-fit: cover;
+    margin-top: 10vh;
 }
