--- a/src/components/categorias/cadastroCategoria/CadastroCategoria.css
+++ b/src/components/categorias/cadastroCategoria/CadastroCategoria.css
@@ -1,21 +1,25 @@
 .card{
     background: linear-gradient(36deg,  #ffffff 1%, #671a62 78%)!important;
+    border-style: solid 10px #ffffff!important;
 }
 
-.form{
-    width: 270px;
-}
-
-.form-input{
+.formCategoria{
     width: 100%;
+  
+
 }
+
+.form.label{
+  color: red;
+}
+
 
 .MuiFormLabel-root{
     color: #FFFFFF;
 }
 
 .background{
-    background: linear-gradient(127deg,  #671a62 18%, #00008b 90%)!important;
+    background: linear-gradient(127deg,  #671a62 18%, #9960b6 90%)!important;
 
     width: 100vw;
     min-height: calc(100vh - 1px); 
