--- a/src/paginas/contato/Contato.css
+++ b/src/paginas/contato/Contato.css
@@ -1,16 +1,20 @@
 .titulo{
-    color:blueviolet;
+    color:#e7cd44;
     text-align: center;
+    font-weight: bold!important;
+    padding-top: 2%!important;
+    padding-bottom: 1%!important;
 }
-.img{
-width: 500px;
-height: 500px;
-display: block;
-margin:0 auto;
+
+.contato{
+    text-align: center!important;
+    font-weight: bold;
+    color: #e7cd44;
+
 }
-.pad{
-    padding: 100px;
-}
-.center{
-    text-align: center;
+
+.contatoLink{
+    align-items: center;
+    font-size: 20px;
+    color: #e7cd44;
 }
