--- a/src/paginas/cadastrarUsuario/CadastroUsuario.css
+++ b/src/paginas/cadastrarUsuario/CadastroUsuario.css
@@ -1,6 +1,8 @@
 .imagem2{
     width: 75%;
     height: 20%;
+    border-radius: 2%;
+    box-shadow: 7px 7px #e7cd44;
 }
 
 .textos2{
@@ -8,33 +10,72 @@
 }
 
 .btnCancelar{
-    margin-right: 20px !important;
+    font-size:14px!important;
+    font-family:Arial!important;
+    width:125px;
+    height:42px;
+    color:#671a62!important;
+    border-color:#cf2392;
+    font-weight:bold!important;
+    border-top-left-radius:19px!important;
+    border-top-right-radius:19px!important;
+    border-bottom-left-radius:19px!important;
+    border-bottom-right-radius:19px!important;
+    box-shadow: -1px 12px 16px -7px #ffe667;
+    text-shadow: -1px -1px 20px #e7cd44;
+    background:linear-gradient(#e7cd44, #cfb94d);
+
 }
+
+.btnCancelar:hover {
+    background: linear-gradient(#ecd669, #c9ba6d);
+  }
+ 
 
 .textColor{
     color:  #e7cd44!important;
+    
 }
 
 
 
 .botaoCadastrar{
-
-    color: #5a4b81;
-    background-color: #5a4b81;
- 
+   font-size:14px!important;
+    font-family:Arial!important;
+    width:125px;
+    height:42px;
+    color:#671a62!important;
+    border-color:#e7cd44;
+    font-weight:bold!important;
+    border-top-left-radius:19px!important;
+    border-top-right-radius:19px!important;
+    border-bottom-left-radius:19px!important;
+    border-bottom-right-radius:19px!important;
+    box-shadow: -1px 12px 16px -7px #e7cd44;
+    text-shadow: -1px -1px 20px #e7cd44;
+    background:linear-gradient(#e7cd44, #cfb94d);
+    margin-left: 8%!important;
   }
+  .botaoCadastrar:hover {
+    background: linear-gradient(#ecd669, #c9ba6d);
+  }
+ 
+  
 
  
   .formBackground{
     background: linear-gradient(36deg,  #ffffff 8%, #671a62 78%)!important;
-    border:solid 4px!important;
     display: flex;
     justify-content: start;
-    padding: 5px;
-    margin: 5px;
+    padding: 10px!important;
+    margin: 25px!important;
+    box-shadow: 5px 5px #e7cd44;
+    border-radius:2%;
   }
 
-  .form{
-    
-}
+  .input{
+   font-size: bold!important;
+  }
+
+
 
