--- a/src/components/categorias/cadastroCategoria/CadastroCategoria.css
+++ b/src/components/categorias/cadastroCategoria/CadastroCategoria.css
@@ -1,6 +1,12 @@
 .card{
     background: linear-gradient(36deg,  #ffffff 1%, #671a62 78%)!important;
-    border:solid 4px!important;
+    border-radius: 2%;
+    box-shadow: 7px 7px #e7cd44;
+   display: flex!important;
+    align-items: center!important;
+    justify-content: center!important;
+    align-content: center!important;
+    
 
 }
 
@@ -55,3 +61,10 @@
     font-weight:bold!important;
   }
 
+  .flex{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    align-content: center;
+  }
