--- a/src/components/categorias/listaCategoria/ListaCategoria.css
+++ b/src/components/categorias/listaCategoria/ListaCategoria.css
@@ -1,3 +1,59 @@
 .text-decorator-none{
     text-decoration: none;
 }
+
+.CategoriaCard{
+    background: linear-gradient(36deg,  #63075a 1%, #e7cd44 78%)!important;
+    width: 40vh;
+    height: 15vw;
+    text-align: center;
+    border-radius: 10%!important;
+    box-shadow: 4px 4px #e7cd44!important;
+    padding-bottom: 2vh;
+}
+
+.botaoAtualizar{
+    font-size:14px!important;
+    font-family:Arial!important;
+    width:7vw;
+    height:5vh;
+    color:#671a62!important;
+    border-color:#e7cd44;
+    font-weight:bold!important;
+    border-top-left-radius:19px!important;
+    border-top-right-radius:19px!important;
+    border-bottom-left-radius:19px!important;
+    border-bottom-right-radius:19px!important;
+    box-shadow: -1px 12px 16px -7px #e7cd44;
+    text-shadow: -1px -1px 20px #e7cd44;
+    background:linear-gradient(#b84d8b, #dfc64e);
+    margin-top: 2vh!important;
+  }
+  
+  .botaoAtualizar:hover {
+    background: linear-gradient(#ecd669, #c9ba6d);
+  }
+
+  .botaoDeletar{
+    font-size:14px!important;
+    font-family:Arial!important;
+    width:7vw;
+    height:5vh;
+    color:#342d2d!important;
+    border-color:#e7cd44;
+    font-weight:bold!important;
+    border-top-left-radius:19px!important;
+    border-top-right-radius:19px!important;
+    border-bottom-left-radius:19px!important;
+    border-bottom-right-radius:19px!important;
+    box-shadow: -1px 12px 16px -7px #b40606;
+    text-shadow: -1px -1px 20px #ed0404;
+    background:linear-gradient(#e00909, #eda7a7);
+    margin-top: 2vh!important;
+    margin-left: 2vw!important;
+
+  }
+  
+  .botaoDeletar:hover {
+    background: linear-gradient(#ecd669, #c9ba6d);
+  }
