--- a/src/paginas/login/Login.css
+++ b/src/paginas/login/Login.css
@@ -7,28 +7,31 @@
     width: 100vw;
     height: 100vh;
     display: flex;
+    align-items: center;
+    justify-content: left;
     flex-direction: column;
     background-image:url(file:///C:/Users/Cleverson/Desktop/Sustech/src/paginas/login/logo.svg);
     background-repeat: no-repeat;
     background-position: 10px;
-    padding: 30px 35px;
-    
-    
-  
+    background-position-x: left;
    
     
   }
   .App h3{
     color: #5a4b81;
     font-size: 30px;
+    box-shadow: 0px 10px 40px #000;
     font-weight: 800;
+    box-sizing: border-box;
+    letter-spacing: 8px;
     margin-left: 300px;
-    margin-top: 5px;
-  
+    margin-top: 25px;
+    border-radius: 8px;
     
   }
 
   
+
   
   body .main  {
     width: 100vw;
@@ -37,21 +40,27 @@
 
   
   }
-  
+    
+  .formulario{
+flex-direction: column;
+margin: 2px 0;
+margin-left: 400px;
+padding: 12px;
+width: 350px;
+border-radius: 0px;
+border: 4px solid #5a4b81;
+box-shadow: 4px 4px 0px;
+font-family: inherit;
+font-size: 15px;
+margin-bottom: 40px;
+margin-top: 25px;
+background: rgb(23, 4, 31);
+cursor: pointer;
 
 
-  
-  
-  form{
-   display: block;
-   margin-left: auto;
-   margin-right: auto;
-   padding-left: 300px;
-   
-   
-   
+
+
   }
-  
 
   
   #dark .username,
@@ -76,6 +85,14 @@
     background-color: #5a4b81;
     width: 76%;
     height: 40px;
+    display: flex;
+    left: 05px;
+
+    
+  
+
+    
+    
   }
   
   .forgot {
