--- a/src/components/produtos/tabProduto/TabProduto.css
+++ b/src/components/produtos/tabProduto/TabProduto.css
@@ -8,13 +8,13 @@
 
 .cardTabProduto{
     background: linear-gradient(36deg,  #ffffff 1%, #671a62 78%)!important;
-    border:solid 4px!important;
-    width: 40vh;
-    height: 65vh;
+    width: 45vh;
+    height: 43vh;
     align-items: center;
     text-align: center;
     margin-left: 3vh;
     padding-top: 10px;
+    box-shadow: 4px 4px #e7cd44;
 }
 
 .imagemListarTabProduto{
@@ -25,4 +25,46 @@
     margin-top: 0;
     border:solid 4px!important;
     box-shadow: 7px 7px #e7cd44;
+    border-radius: 2%;
 }
+
+.cardTabProduto:hover{
+    background: linear-gradient(36deg,  #ffffff 1%, #671a62 78%)!important;
+    border:solid 4px!important;
+    width: 45vh;
+    height: 100%;
+    align-items: center;
+    text-align: center;
+    margin-left: 3vh;
+    padding-top: 10px;
+    box-shadow: 7px 7px #e7cd44;
+}
+
+.flexBotao{
+    display: flex;
+    align-items: center;
+    align-content: center;
+    text-align: center;
+    align-tracks: center;
+  }
+
+  .botaoComprar{
+    font-size:14px!important;
+    font-family:Arial!important;
+    width:7vw;
+    height:5vh;
+    color:#671a62!important;
+    border-color:#e7cd44;
+    font-weight:bold!important;
+    border-top-left-radius:19px!important;
+    border-top-right-radius:19px!important;
+    border-bottom-left-radius:19px!important;
+    border-bottom-right-radius:19px!important;
+    text-shadow: -1px -1px 20px #e7cd44;
+    background:linear-gradient(#b84d8b, #dfc64e);
+    margin-top: 2vh!important;
+  }
+  
+  .botaoComprar:hover {
+    background: linear-gradient(#ecd669, #c9ba6d);
+  }
