--- a/src/components/categorias/listaCategoria/ListaCategoria.css
+++ b/src/components/categorias/listaCategoria/ListaCategoria.css
@@ -29,7 +29,7 @@
     margin-top: 2vh!important;
   }
   
-  .botaoAtualizar:hover {
+  .botaoAtt:hover {
     background: linear-gradient(#ecd669, #c9ba6d);
   }
 
