--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,7 @@
 }
 
 .background1{
-  background: linear-gradient(127deg,  #671a62 18%, #9960b6 90%)!important;
-
-
+  background: rgb(229, 158, 201);
   width: 100%;
   height: 100%;
 }
