--- a/src/components/produtos/cadastrarProduto/CadastrarProduto.css
+++ b/src/components/produtos/cadastrarProduto/CadastrarProduto.css
@@ -1,21 +1,57 @@
 
 .topo{
-    flex-direction: column;
-margin: 2px 0;
-margin-left: 400px;
-padding: 12px;
-width: 350px;
-border-radius: 0px;
-border: 4px solid #5a4b81;
-box-shadow: 4px 4px 0px;
-font-family: inherit;
-font-size: 15px;
-margin-bottom: 40px;
-margin-top: 25px;
-background: rgb(137, 141, 113);
-cursor: pointer;
+font-size: 7vh;
+background: rgb(201, 140, 207); 
+margin-top: 1%;  
+width: 100%!important;
+height: 100%!important;
+}
+
+.formProduto input{
+    height: 2em!important;
+    margin:  auto!important;
+    padding: 1em!important;
+    border-radius: 5px!important;
+    border: none!important;
+
+  }
+
+.formProduto label{
+    color: white!important;
+    font-size: 30%;
 
 
+}
 
-   
+  .campoProduto{
+      width: 100%;
+      color: #000000!important;
+      font-weight: bold!important;
+
+  }
+.titulo{
+    font-weight: bold!important;
+    margin-bottom: 5%!important;
+    margin-top: 3%!important;
+    color: white!important;
+}
+
+.botaoProduto{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size:18px!important;
+    font-family:Arial!important;
+    width:10em;
+    height:2em;
+    color:#671a62!important;
+    border-color:#e7cd44;
+    font-weight:bold!important;
+    border-top-left-radius:19px!important;
+    border-top-right-radius:19px!important;
+    border-bottom-left-radius:19px!important;
+    border-bottom-right-radius:19px!important;
+    box-shadow: -1px 12px 16px -7px #e7cd44;
+    text-shadow: -1px -1px 20px #e7cd44;
+    background:linear-gradient(#e7cd44, #cfb94d);
 }
