--- a/src/components/carrinho/Carrinho.css
+++ b/src/components/carrinho/Carrinho.css
@@ -62,7 +62,7 @@
     box-shadow: -1px 12px 16px -7px #e7cd44;
     text-shadow: -1px -1px 20px #e7cd44;
     background:linear-gradient(#e7cd44, #cfb94d);
-   margin-top: 1.2em;
+   margin-top: 1.2em!important;
   }
   
   .botaoComprarCart:hover {
