--- a/src/paginas/login/Login.css
+++ b/src/paginas/login/Login.css
@@ -1,126 +1,75 @@
-*{
-  margin: 0;
-  padding: 0;
+.imagem2{
+  width: 100% !important;
+  height: 100% !important;
+  border-radius: 2%;
+  box-shadow: 7px 7px #8b44e7;
+  float: right;
+  margin-bottom: 20%;
+  margin-left: 10%!important;
 }
-.App {
-  width: 100vw;
-  height: 100vh;
+
+.formLogin {
+  margin-right: 10%;
+}
+
+.formLogin 
+
+.textos2{
+  font-weight: bold !important; 
+}
+
+
+.textColor{
+  color: #671a62 !important;
+  font-weight: bold !important;
+  font-family:Arial !important;
+
+}
+
+
+
+.botaoEntrar{
+ font-size:14px!important;
+  font-family:Arial!important;
+  width:125px;
+  height:42px;
+  color:rgb(255, 255, 255)!important;
+  border-color:#8b44e7;
+  font-weight:bold!important;
+  border-top-left-radius:19px!important;
+  border-top-right-radius:19px!important;
+  border-bottom-left-radius:19px!important;
+  border-bottom-right-radius:19px!important;
+  box-shadow: -1px 12px 16px -7px #e7cd;
+  text-shadow: -1px -1px 20px #e7cd;
+  background:linear-gradient(#e7cd, #ae43b8);
+  margin-left: 8%!important;
+}
+.botaoEntrar:hover {
+  background: #6108d4 !important;
+}
+
+
+
+
+.formBackground{
+  word-wrap: break-word;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  justify-content: start;
+  box-shadow: 5px 5px #8b44e7;
+  border-radius:2%;
+  
 }
 
-#light {
-  background-color: #f3ebf6;
+#darkBackground{
+  background: #371947 !important;
 }
 
-#dark {
-  background-color: #13111b;
-}
- * {
-  text-decoration: none;
- }
-body {
-  margin: 0;
-  padding: 0;
-}
-
-body .main  {
-  width: 100vw;
-  height: 100vh;
-
-  box-shadow: 0px, 11px 35px 2px rgba(0, 0, 0, 0.14);
-
-
-}
-
-#light .main {
-  background-color: #fff;
-}
-
-#dark .main {
-  background-color: #201b2d;
-}
-
-.sign {
-  padding-top: 40px;
-  font-size: 23px;
-  font-weight: 700;
-  color: #5a4b81;
-  display: flex;
-  justify-content: center;
+.colorText{
+  color:#671a62;
   text-align: center;
-  flex-direction: column;
-}
-
-#light .sign{
-  color: #5a4b81;
-}
-
-#dark .sign {
-  color: #ffffff;
-}
-
-.username {
-  width: 76%;
-  font-weight: 700;
-  font-size: 14px;
-  letter-spacing: 1px;
-  padding: 10px 10px;
-  border-radius: 20px;
-  outline: none;
-  box-sizing: border-box;
-  border: 2px solid rgba(0, 0, 0, 0.02);
-  margin-bottom: 50px;
-  text-align: center;
-  margin-bottom: 27px;
-  font-family: "Ubuntu", sans-serif;
-}
-
-.password {
-  width: 76%;
-  font-weight: 700;
-  font-size: 14px;
-  letter-spacing: 1px;
-  padding: 10px 10px;
-  border-radius: 20px;
-  outline: none;
-  box-sizing: border-box;
-  border: 2px solid rgba(0, 0, 0, 0.02);
-  margin-bottom: 50px;
-  text-align: center;
-  margin-bottom: 27px;
-  font-family: "Ubuntu", sans-serif;
-}
-
-
-form.form {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-#light .username,
-#light .password {
-  color: rgb(38, 50, 56);
-  background-color: rgba(136, 126, 126, 0.04);
-}
-
-#dark .username,
-#dark .password {
-  color: rgb(254, 255, 255);
-  background: rgba(255, 247, 247, 0.299);
-}
-
-#dark .username::placeholder,
-#dark .password::placeholder {
-  color: rgb(254, 255, 255);
-}
-
-input:focus {
-  border: 2px solid rgba(0, 0, 0, 0.18) !important;
+  font-size: 3vh;
+  margin-bottom: 10%;
 }
 
 .submit {
@@ -134,24 +83,4 @@ input:focus {
   align-items: center;
   justify-content: center;
   text-decoration: none;
-}
-
-.forgot {
-  font-weight: 700;
-  color: #5a4b81;
-  text-decoration: none;
-  padding-top: 15px;
-  margin-top: 20px;
-}
-
-a {
-  font-weight: 700;
-  color: #5a4b81;
-  text-decoration: none;
-}
-
-@media screen and (max-width: 600px) {
-  .main {
-    border-radius: 0px;
-  }
 }
