--- a/src/components/categorias/cadastroCategoria/CadastroCategoria.css
+++ b/src/components/categorias/cadastroCategoria/CadastroCategoria.css
@@ -17,7 +17,7 @@
   padding: 1em!important;
   border: none!important;
   margin-bottom: 1em;
-  color: #ff0000!important;
+  color: #ffffff!important;
   border-radius: 5px!important;
     
 }
