--- a/src/components/produtos/tabProduto/TabProduto.css
+++ b/src/components/produtos/tabProduto/TabProduto.css
@@ -9,36 +9,42 @@
 .cardTabProduto{
     background: linear-gradient(36deg,  #ffffff 1%, #671a62 78%)!important;
     width: 45vh;
-    height: 43vh;
+    height: 8em;
     align-items: center;
     text-align: center;
     margin-left: 3vh;
     padding-top: 10px;
     box-shadow: 4px 4px #e7cd44;
+    transition-property:height!important;
+    transition-timing-function: ease!important;
+    transition-duration: 1s!important;
 }
+
+.cardTabProduto:hover{
+  background: linear-gradient(36deg,  #ffffff 1%, #671a62 78%)!important;
+  border:solid 4px!important;
+  width: 45vh;
+  height: 13em;
+  align-items: center;
+  text-align: center;
+  margin-left: 3vh;
+  padding-top: 10px;
+  box-shadow: 7px 7px #e7cd44;
+}
+
 
 .imagemListarTabProduto{
     width: 100%;
-    height: 30vh;
+    height: 100%;
     border-radius: 10%;
     float: left;
     margin-top: 0;
     border:solid 4px!important;
     box-shadow: 7px 7px #e7cd44;
     border-radius: 2%;
+   
 }
 
-.cardTabProduto:hover{
-    background: linear-gradient(36deg,  #ffffff 1%, #671a62 78%)!important;
-    border:solid 4px!important;
-    width: 45vh;
-    height: 100%;
-    align-items: center;
-    text-align: center;
-    margin-left: 3vh;
-    padding-top: 10px;
-    box-shadow: 7px 7px #e7cd44;
-}
 
 .flexBotao{
     display: flex;
