--- a/src/paginas/contato/Contato.css
+++ b/src/paginas/contato/Contato.css
@@ -11,9 +11,9 @@
 .cardSobreNos{
     width: 100%;
     height: 25vw;
-    background: linear-gradient(360deg,  #4a0046 1%, #a31b9a 80%)!important;
+    background: linear-gradient(360deg,  #d391d0 1%, #cf84ca 80%)!important;
     border-radius: 2%;
-    box-shadow: 7px 7px #e7cd44;
+    box-shadow: 0.4em 0.4em #c365c6;
    display: flex!important;
     align-items: center!important;
     justify-content: center!important;
@@ -21,9 +21,9 @@
 }
 .cardSobreNosTitulo{
     width: 100vh;
-    background: linear-gradient(360deg,  #4a0046 1%, #973290 10%)!important;
+    background: linear-gradient(360deg, #d391d0 1%, #cf84ca 10%)!important;
     border-radius: 0%;
-    box-shadow: 7px 7px #e7cd44;
+    box-shadow: 0.4em 0.4em #c365c6;
    display: flex!important;
     align-items: center!important;
     justify-content: center!important;
@@ -31,16 +31,16 @@
 }
 
 .texto1{
-    color: white;
+    color: rgb(0, 0, 0);
     text-align: center;
-    line-height: 5vh;
-    font-size: 4vh!important;
+    line-height: 1em ;
+    font-size: 2em!important;
 
 }
 .contato{
     text-align: center!important;
-    font-weight: bold;
-    color: #e7cd44;
+    font-weight: bold!important;
+    color: #000000;
 
 }
 .imagemContato{
@@ -74,12 +74,12 @@
     min-height: 5px;
     text-align: center;
     border-radius: 10%!important;
-    box-shadow: 4px 4px #e7cd44!important;
+    box-shadow: 0.4em 0.4em #c365c6;
     font-size: 3vh!important;
     font-weight: bold!important;
     text-align: center!important;
     text-decoration: none;
-    transition-property:height!important;
+    transition-property:height,box-shadow!important;
     transition-timing-function: ease!important;
     transition-duration: 1s!important;
 
@@ -130,4 +130,11 @@
     
 }
 
+
+.titleEquipe{
+font-size:2.5em!important;
+padding-bottom: 2em!important;
+
+
+}
 
