--- a/src/components/produtos/listaProdutos/ListarProdutos.css
+++ b/src/components/produtos/listaProdutos/ListarProdutos.css
@@ -1,47 +1,41 @@
 .imagemListarProduto{
-    width: 100%;
-    height: 30vh;
+    width: 70%!important;
+    height: 100%!important;
     border-radius: 10%;
-    float: left;
-    margin-bottom: 10%;
-    border:solid 4px!important;
-    box-shadow: 7px 7px #e7cd44;
+    border:solid 2px!important;
+    box-shadow: 5px 5px #e7cd44;
+    
 }
 
 .cardProdutos{
-    background: linear-gradient(36deg,  #ffffff 1%, #671a62 78%)!important;
-    width: 100%;
-    text-align: left;
-    margin-bottom: 5px;
-    padding-left: 2vh;
+    background: #f0aef4!important;
+    border: 1px solid white!important;
+    height: 100%!important;
+    width: 100%!important;
 }
 
-.textoProdutos{
-    display: inline-block;
-    vertical-align: top;
-    padding-left: 1%;
 
-}
-
-.produtoQuebra{
-    display: inline-block;
-}
 
 .nomeProduto{
     font-weight: bold!important;
     font-size: 35px!important;
+    text-align: center;
+    margin-top: 5%!important;
+    margin-bottom: 3%!important;
 }
 
 .linhaProduto{
     font-weight: bold!important;
     font-size: 25px!important;
+    text-align: center;
+    margin-bottom: 2%!important;
 }
 
 .botaoAtt{
     font-size:14px!important;
     font-family:Arial!important;
-    width:7vw;
-    height:5vh;
+    width:120%;
+    height:3em!important;
     color:#671a62!important;
     border-color:#e7cd44;
     font-weight:bold!important;
@@ -51,7 +45,23 @@
     border-bottom-right-radius:19px!important;
     text-shadow: -1px -1px 20px #e7cd44;
     background:linear-gradient(#b84d8b, #dfc64e);
-    margin-top: 2vh!important;
+
+  }
+
+  .botaoComprarListar{
+    font-size:14px!important;
+    font-family:Arial!important;
+    width:120%;
+    height:3em!important;
+    color:#671a62!important;
+    border-color:#e7cd44;
+    font-weight:bold!important;
+    border-top-left-radius:19px!important;
+    border-top-right-radius:19px!important;
+    border-bottom-left-radius:19px!important;
+    border-bottom-right-radius:19px!important;
+    text-shadow: -1px -1px 20px #e7cd44;
+    background:linear-gradient(#b84d8b, #dfc64e);
   }
   
   .botaoAtualizar:hover {
@@ -63,8 +73,8 @@
   .botaoDel{
     font-size:14px!important;
     font-family:Arial!important;
-    width:7vw;
-    height:5vh;
+    width:120%;
+    height:3em!important;
     color:#342d2d!important;
     border-color:#e7cd44;
     font-weight:bold!important;
@@ -74,12 +84,16 @@
     border-bottom-right-radius:19px!important;
     text-shadow: -1px -1px 20px #ed0404;
     background:linear-gradient(#e00909, #eda7a7);
-    margin-top: 2vh!important;
-    margin-right: 1vw!important;
-    padding-right: 4w!important;
 
   }
   
   .botaoDel:hover {
     background: linear-gradient(#ecd669, #c9ba6d);
+  }
+
+  .botoes{
+    display: flex!important;
+    text-align: center!important;
+    justify-content: center!important;
+    align-items: center!important;
   }
