--- a/src/paginas/home/Home.css
+++ b/src/paginas/home/Home.css
@@ -1,7 +1,7 @@
 .botaoHome{
     font-size:14px!important;
     font-family:Arial!important;
-    width:125px;
+    width:150px;
     height:42px;
     color:#671a62!important;
     border-color:#e7cd44;
@@ -13,7 +13,8 @@
     box-shadow: -1px 12px 16px -7px #e7cd44;
     text-shadow: -1px -1px 20px #e7cd44;
     background:linear-gradient(#e7cd44, #cfb94d);
-    margin-top: 2vh!important;
+    margin-bottom: 5em!important;
+    margin-top: 0!important;
   }
 
   .botaoHome:hover {
@@ -21,7 +22,6 @@
   }
 
   .backgroundHome{
-    margin-top: 1em;
   background-color:#671a62;
   padding: 1em;
   color: #e7cd44;
