Alterações pagina de login e cadastro

--- a/src/paginas/cadastrarUsuario/CadastroUsuario.css
+++ b/src/paginas/cadastrarUsuario/CadastroUsuario.css
@@ -1,6 +1,6 @@
 .imagemCadastro{
-    width: 74%;
-    height: 40%;
+    width: 60%;
+    height: 10%!important;
     border-radius: 2%;
     box-shadow: 0.4em 0.4em #cc84cf;
     margin: 0em;
