--- a/src/components/produtos/deletarProduto/DeletarProduto.css
+++ b/src/components/produtos/deletarProduto/DeletarProduto.css
@@ -1,70 +1,65 @@
 .deletarCardProduto{
-    background: linear-gradient(36deg,  #63075a 1%, #e7cd44 78%)!important;
-    width: 40vh;
-    height: 15vw;
-    text-align: center;
-    border-radius: 10%!important;
-    box-shadow: 4px 4px #e7cd44!important;
-    padding-bottom: 2vh;
+  background: linear-gradient(36deg, #dfb4db 1%, #fab7e6 78%) !important;
+  width: 17em;
+  height: 15em;
+  text-align: center;
+  border-radius: 10% !important;
+  box-shadow: 0.4em 0.4em #c365c6;
+  margin-top: 2em;
+  margin-bottom: 2em;
 }
 
+
 .botaoNaoProduto{
-    font-size:14px!important;
-    font-family:Arial!important;
-    width:7vw;
-    height:5vh;
-    color:#671a62!important;
-    border-color:#e7cd44;
-    font-weight:bold!important;
-    border-top-left-radius:19px!important;
-    border-top-right-radius:19px!important;
-    border-bottom-left-radius:19px!important;
-    border-bottom-right-radius:19px!important;
-    box-shadow: -1px 12px 16px -7px #e7cd44;
-    text-shadow: -1px -1px 20px #e7cd44;
-    background:linear-gradient(#b84d8b, #dfc64e);
-    margin-top: 2vh!important;
-    margin-right: 1vw!important;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    align-content: center;
-  }
-  
-  .botaoNaoProduto:hover {
-    background: linear-gradient(#ecd669, #c9ba6d);
-  }
+  font-size: 0.9em !important;
+  font-family: Arial !important;
+  width: 6.5em;
+  height: 2em;
+  color: #671a62 !important;
+  border-color: #e7cd44;
+  font-weight: bold !important;
+  border-top-left-radius: 19px !important;
+  border-top-right-radius: 19px !important;
+  border-bottom-left-radius: 19px !important;
+  border-bottom-right-radius: 19px !important;
+  box-shadow: -1px 12px 16px -7px #e7cd44;
+  text-shadow: -1px -1px 20px #e7cd44;
+  background: linear-gradient(#b84d8b, #dfc64e);
 
-  .botaoSimProduto{
-    font-size:14px!important;
-    font-family:Arial!important;
-    width:7vw;
-    height:5vh;
-    color:#342d2d!important;
-    border-color:#e7cd44;
-    font-weight:bold!important;
-    border-top-left-radius:19px!important;
-    border-top-right-radius:19px!important;
-    border-bottom-left-radius:19px!important;
-    border-bottom-right-radius:19px!important;
-    box-shadow: -1px 12px 16px -7px #b40606;
-    text-shadow: -1px -1px 20px #ed0404;
-    background:linear-gradient(#e00909, #eda7a7);
-    margin-top: 2vh!important;
-    margin-right: 1vw!important;
-    
-    
+}
 
-  }
-  
-  .botaoSimProduto:hover {
-    background: linear-gradient(#ecd669, #c9ba6d);
-  }
+.botaoNao:hover {
+  background: linear-gradient(#ecd669, #c9ba6d);
+}
 
-  .flexBottonProduto{
-      display: flex!important;
-      align-items: center!important;
-      justify-content: center!important;
-      text-align: center!important;
-  }
+.botaoSimProduto{
+  font-size: 0.9em !important;
+  font-family: Arial !important;
+  width: 6.5em;
+  height: 2em;
+  color: #342d2d !important;
+  border-color: #e7cd44;
+  font-weight: bold !important;
+  border-top-left-radius: 19px !important;
+  border-top-right-radius: 19px !important;
+  border-bottom-left-radius: 19px !important;
+  border-bottom-right-radius: 19px !important;
+  box-shadow: -1px 12px 16px -7px #b40606;
+  text-shadow: -1px -1px 20px #ed0404;
+  background: linear-gradient(#e00909, #eda7a7);
+
+}
+
+.botaoSim:hover {
+  background: linear-gradient(#ecd669, #c9ba6d);
+}
+
+.titleCardDelete{
+font-size:1.2em !important;
+
+}
+
+.produtoDelete{
+font-size: 1.4em!important;
+margin-bottom: -1.5em!important;
+}
