--- a/src/components/produtos/deletarProduto/DeletarProduto.css
+++ b/src/components/produtos/deletarProduto/DeletarProduto.css
@@ -48,7 +48,7 @@
     border-top-right-radius:19px!important;
     border-bottom-left-radius:19px!important;
     border-bottom-right-radius:19px!important;
-    box-shadow: -1px 12px 16px -7px #b40606;
+  
     text-shadow: -1px -1px 20px #ed0404;
     background:linear-gradient(#e00909, #eda7a7);
     margin-top: 2vh!important;
@@ -67,4 +67,13 @@
       align-items: center!important;
       justify-content: center!important;
       text-align: center!important;
+  }
+
+.titleCardDelete{
+  font-weight: bold!important;
+  font-size: 1.5em!important;
+  text-align: center;
+  margin-top: 5%!important;
+  margin-bottom: 3%!important;
+
   }
