--- a/src/components/estaticos/navbar/Navbar.css
+++ b/src/components/estaticos/navbar/Navbar.css
@@ -15,8 +15,6 @@ color: #ff0084!important;
 
 .tituloNavbar:hover{
     color: #671a62;
-
-
 }
 
 .logout{
@@ -24,7 +22,7 @@ color: #ff0084!important;
   justify-content: end!important;
   align-items: end!important;
   align-content: end!important;
-
+  margin-left: 44em;
   }
 
 .img2{
@@ -33,17 +31,17 @@ color: #ff0084!important;
     margin:0 auto;
 }
 
-.flexContainer{
-    display: flex;
-   justify-content: center;
-    align-items: center;
-    align-content: center;
-
-}
-
 .containerImagem{
   display: flex!important;
   justify-content: left!important;
   align-items: left!important;
   align-content: flex-start!important;
+}
+
+.meioNavBar{
+    display: flex!important;
+    justify-content: center!important;
+    align-items: center!important;
+    align-content: center!important;
+    margin-left: 50em!important;
 }
