--- a/src/components/produtos/listaProdutos/ListarProdutos.css
+++ b/src/components/produtos/listaProdutos/ListarProdutos.css
@@ -10,8 +10,8 @@
 .cardProdutos{
     background: #f0aef4!important;
     border: 1px solid white!important;
-    height: 70vh!important;
-    width: 50vh!important;
+    height: 36em!important;
+    width: 25em!important;
 }
 
 
