--- a/src/components/produtos/deletarProduto/DeletarProduto.css
+++ b/src/components/produtos/deletarProduto/DeletarProduto.css
@@ -41,7 +41,7 @@
     font-family:Arial!important;
     width:7vw;
     height:5vh;
-    color:#342d2d!important;
+    color:#dd0e0e!important;
     border-color:#e7cd44;
     font-weight:bold!important;
     border-top-left-radius:19px!important;
