--- a/src/components/produtos/cadastrarProduto/CadastrarProduto.css
+++ b/src/components/produtos/cadastrarProduto/CadastrarProduto.css
@@ -17,7 +17,7 @@ height: 100%!important;
   }
 
 .formProduto label{
-    color: white!important;
+    color: rgb(10, 8, 8)!important;
     font-size: 0.5em;
 
 
