--- a/src/paginas/home/Home.css
+++ b/src/paginas/home/Home.css
@@ -1,3 +1,12 @@
+.home{
+  margin-top: 25px;
+  background-image: url("https://paranashop.com.br/wp-content/uploads/2019/02/Calend%C3%A1rio-Tech-DB1-Global-Software.jpg" );
+
+  
+}
+
+
+
 .botaoHome{
     font-size:14px!important;
     font-family:Arial!important;
