--- a/src/components/produtos/deletarProduto/DeletarProduto.css
+++ b/src/components/produtos/deletarProduto/DeletarProduto.css
@@ -25,6 +25,7 @@
   box-shadow: -1px 12px 16px -7px #e7cd44;
   text-shadow: -1px -1px 20px #e7cd44;
   background: linear-gradient(#b84d8b, #dfc64e);
+  margin-top: 1em!important;
 
 
 }
@@ -50,7 +51,8 @@
     text-shadow: -1px -1px 20px #ed0404;
     background:linear-gradient(#e00909, #eda7a7);
     margin-top: 2vh!important;
-    margin-right: 1vw!important;
+    margin-right: 1em!important;
+    margin-left: 2em!important;
     
   }
 .botaoSimProduto{
