--- a/src/components/estaticos/navbar/Navbar.css
+++ b/src/components/estaticos/navbar/Navbar.css
@@ -22,11 +22,8 @@ color: #ff0084!important;
   justify-content: end!important;
   align-items: end!important;
   align-content: end!important;
-<<<<<<< HEAD
-  margin-left: 44em!important;
-=======
-  margin-left: 19.1em!important;
->>>>>>> f57bb38a811aede1f3e278ccc83f0bf1f4d448b6
+
+  margin-left: 14.1em!important;
   }
 
 .img2{
@@ -46,6 +43,26 @@ color: #ff0084!important;
     justify-content: center!important;
     align-items: center!important;
     align-content: center!important;
-    margin-left: 21em;
+    margin-left: 5em!important;
    
+}
+
+.logoutUser{
+    display: flex!important;
+    justify-content: end!important;
+    align-items: end!important;
+    align-content: end!important;
+  
+    margin-left: 25.1em!important;
+
+}
+
+
+.meioNavBarUser{
+    display: flex!important;
+    justify-content: center!important;
+    align-items: center!important;
+    align-content: center!important;
+    margin-left: 22em!important;
+
 }
